# thelerine-vton

./: .gitignore  README.md  environment.yml  inference.py  pyproject.toml  requirements.txt  train.py
configs/: train.yaml  train_personA_overfit.yaml
models/blocks/: fusion.py
preprocessing/: dataset_builder.py  inference_preprocessor.py
tests/: test_dataset.py  test_model.py
thelerine_vton/datasets/: manifest.py  sample.py  transforms.py  triplet_dataset.py
thelerine_vton/models/: feature_decoder.py  feature_encoder.py  model_output.py  output_head.py  vton_generator.py
thelerine_vton/models/blocks/: attention.py  conv_block.py  downsample.py  fusion.py  residual_block.py  upsample.py
thelerine_vton/preprocessing/: agnostic.py  build_manifest.py  dataset_builder.py  garment_alignment.py
thelerine_vton/training/: callbacks.py  losses.py  metrics.py  scheduler.py  trainer.py
thelerine_vton/utils/: config.py  device.py  seed.py
utils/: device.py
