[project]
name = "thelerine-vton"
version = "0.1.0"
description = "Deep learning virtual try-on model for ThelerineAI."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "Keneilwe Mokoka"}
]

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "opencv-python",
    "Pillow",
    "PyYAML",
    "tqdm",
    "tensorboard",
    "matplotlib",
    "scikit-image",
    "lpips"
]

[tool.setuptools]
packages = ["datasets", "models", "training", "utils"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"