[project]
name = "thelerine-vton"
version = "0.1.0"
description = "Deep learning virtual try-on model for ThelerineAI."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Keneilwe Mokoka" }
]

dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchaudio==2.2.2",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "opencv-python==4.11.0.86",
    "Pillow==11.3.0",
    "PyYAML==6.0.2",
    "tqdm==4.67.1",
    "matplotlib==3.10.6",
    "tensorboard==2.20.0",
    "scikit-image==0.25.2",
    "lpips==0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "black==25.1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["thelerine_vton*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"